fix: refine layout and spacing in FormSheet and Home components for better responsiveness

--- a/app/globals.css
+++ b/app/globals.css
@@ -19,7 +19,7 @@
 }
 
 body {
- font-family: var(--font-inter), Arial, Helvetica, sans-serif !important;
+ font-family: var(--font-inter), Arial, Helvetica, sans-serif;
 }
 
 @media  screen and (min-width: 56.25rem) {
